@@ -25,13 +25,13 @@ import javafx.stage.*;
  * @author USER
  */
 public class GUI extends Application{
-    public static Map<String,Integer> map=new Map();
-    public static LinkedList<Kangaroo>kangaroo=new LinkedList();
-    Scene scene1,scene2,scene3,scene4,scene5;
-    int numberOfPoint,maxPoint,maxPath,numberOfRows,numPath,index;
-    Random r;
+    protected static Map<String,Integer> map=new Map();
+    protected static LinkedList<Kangaroo>kangaroo=new LinkedList();
+    private Scene scene1,scene2,scene3,scene4,scene5,scene6;
+    private int numberOfPoint,maxPoint,maxPath,numberOfRows,numPath,index,Threshold;
+    private Random r;
     
-    public static void main(String[]args){
+    public static void start(){
         launch();
     }
 
@@ -45,52 +45,52 @@ public class GUI extends Application{
         imageview1.setFitHeight(200);
         imageview1.setFitWidth(300);
         
-        Button startbutton = new Button();
-        startbutton.setText("Start");
-        startbutton.setMinHeight(50);
-        startbutton.setMinWidth(100);
-        startbutton.setOnAction(e->primaryStage.setScene(scene2));
+        Button startButton1 = new Button();
+        startButton1.setText("Start");
+        startButton1.setMinHeight(50);
+        startButton1.setMinWidth(100);
+        startButton1.setOnAction(e->primaryStage.setScene(scene2));
         
-        Label welcome=new Label("Welcome to JumpyGrof Simulator");
-        welcome.setFont(new Font("Times New Roman", 48));
+        Label Welcomelabel=new Label("Welcome to JumpyGrof Simulator");
+        Welcomelabel.setFont(new Font("Times New Roman", 48));
         
-        VBox starting_layout = new VBox(20);
-        starting_layout.getChildren().addAll(imageview1,welcome,startbutton);
-        starting_layout.setAlignment(Pos.CENTER);
-        Scene startingScene = new Scene(starting_layout, 1000, 800);
-        primaryStage.setScene(startingScene);
+        VBox box1 = new VBox(20);
+        box1.getChildren().addAll(imageview1,Welcomelabel,startButton1);
+        box1.setAlignment(Pos.CENTER);
+        scene1 = new Scene(box1, 1000, 800);
+        primaryStage.setScene(scene1);
         
         ///////////////////////////Second Layout///////////////////////////////
-        TextField pointnumber = new TextField();
-        pointnumber.setPromptText("Enter number of points in the map");
-        pointnumber.setMaxWidth(300);
-        pointnumber.setOnKeyPressed(e -> {
+        TextField inputPoint = new TextField();
+        inputPoint.setPromptText("Enter number of points in the map");
+        inputPoint.setMaxWidth(300);
+        inputPoint.setOnKeyPressed(e -> {
             if(e.getCode().equals(KeyCode.ENTER))
-                if(isInteger(pointnumber)){
+                if(isInteger(inputPoint)){
                     primaryStage.setScene(scene3);
-                    numberOfPoint= Integer.parseInt(pointnumber.getText());
+                    numberOfPoint= Integer.parseInt(inputPoint.getText());
                     maxPoint=numberOfPoint;
                     maxPath = numberOfPoint-1;
                 }
                 else
-                    GUIAlertBox.display("Error", pointnumber.getText()+" is not an integer.");
+                    GUIAlertBox.display("Error", inputPoint.getText()+" is not an integer.");
         });;
         
-        Label input = new Label("Enter number of points in the map:");
-        input.setFont(new Font("Times New Roman",24));
+        Label Pointlabel = new Label("Enter number of points in the map:");
+        Pointlabel.setFont(new Font("Times New Roman",24));
         
-        Button enterbutton = new Button("Enter");
-        enterbutton.setMinHeight(50);
-        enterbutton.setMinWidth(100);
-        enterbutton.setOnAction(e -> {   
-            if(isInteger(pointnumber)){
+        Button enterButton2 = new Button("Enter");
+        enterButton2.setMinHeight(50);
+        enterButton2.setMinWidth(100);
+        enterButton2.setOnAction(e -> {   
+            if(isInteger(inputPoint)){
                 primaryStage.setScene(scene3);
-                numberOfPoint= Integer.parseInt(pointnumber.getText());
+                numberOfPoint= Integer.parseInt(inputPoint.getText());
                 maxPoint=numberOfPoint;
                 maxPath = numberOfPoint-1;
             }
             else
-                GUIAlertBox.display("Error", pointnumber.getText()+" is not an integer.");
+                GUIAlertBox.display("Error", inputPoint.getText()+" is not an integer.");
         });
         
         ImageView imageview2=new ImageView(image);
@@ -98,7 +98,7 @@ public class GUI extends Application{
         imageview2.setFitWidth(300);
         
         VBox input_layout = new VBox(20);
-        input_layout.getChildren().addAll(imageview2,input,pointnumber,enterbutton);
+        input_layout.getChildren().addAll(imageview2,Pointlabel,inputPoint,enterButton2);
         input_layout.setAlignment(Pos.CENTER);
         scene2 = new Scene(input_layout, 1000,800);
 
@@ -124,6 +124,7 @@ public class GUI extends Application{
         TextField inputFood = new TextField();
         TextField inputSize = new TextField();
         TextField inputPath = new TextField();
+        
         Label IDlabel = new Label("ID:");
         Label foodlabel = new Label("Number of food:");
         Label kangaroolabel = new Label("Number of Kangaroo:");
@@ -133,8 +134,8 @@ public class GUI extends Application{
         inputSize.setMinWidth(300);
         inputPath.setMinWidth(300);
         
-        Button addButton = new Button("Add");
-        addButton.setOnAction(e->{
+        Button addButton3 = new Button("Add");
+        addButton3.setOnAction(e->{
             boolean valid=true;
             if(inputID.getText().equals("")||inputFood.getText().equals("")||inputSize.getText().equals("")||inputPath.getText().equals("")){
                 GUIAlertBox.display("Error", "Incomplete Data");
@@ -153,10 +154,6 @@ public class GUI extends Application{
                 
             if(map.hasPoint(inputID.getText())!=null){
                 GUIAlertBox.display("Error", "Redundant Path ID.");
-                inputID.clear();
-                inputFood.clear();
-                inputSize.clear();
-                inputPath.clear();
                 valid=false;
             }
             
@@ -168,23 +165,22 @@ public class GUI extends Application{
             }
             
             if(valid){
-                map.addPoint(inputID.getText(),Integer.parseInt(inputFood.getText()),Integer.parseInt(inputSize.getText()),Integer.parseInt(inputPath.getText()));
-                pointlist.add(new Point(inputID.getText(),Integer.parseInt(inputFood.getText()),Integer.parseInt(inputSize.getText()),Integer.parseInt(inputPath.getText())));
-                inputID.clear();
-                inputFood.clear();
-                inputSize.clear();
-                inputPath.clear();
+                pointlist.add(map.addPoint(inputID.getText(),Integer.parseInt(inputFood.getText()),Integer.parseInt(inputSize.getText()),Integer.parseInt(inputPath.getText())));
                 numberOfPoint--;       
                 numberOfRows= id.getTableView().getItems().size();
                 table.setItems(pointlist);
             }
+            inputID.clear();
+            inputFood.clear();
+            inputSize.clear();
+            inputPath.clear();
         });
         
-        Button okButton = new Button("Ok");
-        okButton.setOnAction(e->{primaryStage.setScene(scene4);});
+        Button nextButton3 = new Button("Next");
+        nextButton3.setOnAction(e->{primaryStage.setScene(scene4);});
         
-        Button randomButton= new Button("Random");
-        randomButton.setOnAction(e->{
+        Button randomButton3= new Button("Random");
+        randomButton3.setOnAction(e->{
             r=new Random();
             inputID.setText(r.nextInt(100)+"");
             inputFood.setText(r.nextInt(100)+20+"");
@@ -192,30 +188,40 @@ public class GUI extends Application{
             inputPath.setText(r.nextInt(maxPath)+"");
         });
         
-        GridPane grid1 = new GridPane();
-        grid1.setPadding(new Insets(20));
-        grid1.setVgap(8);
-        grid1.setHgap(20);
-        GridPane.setConstraints(IDlabel, 0, 0);GridPane.setConstraints(inputID, 1, 0);
-        GridPane.setConstraints(foodlabel, 0, 2);GridPane.setConstraints(inputFood, 1, 2);
-        GridPane.setConstraints(kangaroolabel, 0, 4);GridPane.setConstraints(inputSize, 1, 4);
-        GridPane.setConstraints(pathlabel, 0, 6);GridPane.setConstraints(inputPath, 1, 6);
-        grid1.getChildren().addAll(IDlabel, foodlabel, kangaroolabel, pathlabel, inputID, inputFood, inputSize, inputPath);
-        BorderPane buttons=new BorderPane();
-        buttons.setLeft(addButton);
-        buttons.setCenter(randomButton);
-        buttons.setRight(okButton);
-        buttons.setPadding(new Insets(100));
-        BorderPane pane = new BorderPane();
-        pane.setTop(table);
-        pane.setCenter(grid1);
-        pane.setBottom(buttons);
-        scene3 = new Scene(pane,1000,800);
+        Button backButton3=new Button("Back");
+        backButton3.setOnAction(e -> {   
+            primaryStage.setScene(scene2);
+        });
         
+        GridPane grid3 = new GridPane();
+        grid3.setPadding(new Insets(70,20,20,0));
+        grid3.setVgap(8);
+        grid3.setHgap(20);
+        GridPane.setConstraints(IDlabel, 11, 0);GridPane.setConstraints(inputID, 12, 0);
+        GridPane.setConstraints(foodlabel, 11, 2);GridPane.setConstraints(inputFood, 12, 2);
+        GridPane.setConstraints(kangaroolabel, 11, 4);GridPane.setConstraints(inputSize, 12, 4);
+        GridPane.setConstraints(pathlabel, 11, 6);GridPane.setConstraints(inputPath, 12, 6);
+        grid3.getChildren().addAll(IDlabel, foodlabel, kangaroolabel, pathlabel, inputID, inputFood, inputSize, inputPath);
+        
+        GridPane buttons=new GridPane();
+        buttons.setHgap(50);
+        GridPane.setConstraints(backButton3,2,0);
+        GridPane.setConstraints(addButton3,4,0);
+        GridPane.setConstraints(randomButton3,6,0);
+        GridPane.setConstraints(nextButton3,8,0);
+        buttons.getChildren().addAll(backButton3,addButton3,randomButton3,nextButton3);
+        buttons.setPadding(new Insets(0,100,100,100));
+        BorderPane pane3 = new BorderPane();
+        pane3.setTop(table);
+        pane3.setCenter(grid3);
+        pane3.setBottom(buttons);
+        scene3 = new Scene(pane3,1000,800);
+        scene3.setOnKeyPressed(e->{
+            if(e.getCode().equals(KeyCode.ENTER))
+                inputPath.setOnAction(addButton3.getOnAction());
+        });
         ///////////////////////////Fourth Layout///////////////////////////////
         ObservableList<Path<Integer>> pathlist=FXCollections.observableArrayList();
-        
-        //TableColumn<
         TableColumn<Path, String> source = new TableColumn<>("Source");
         TableColumn<Path, String> destination = new TableColumn<>("Destination");
         TableColumn<Path, Integer> obstacle = new TableColumn<>("Height");
@@ -239,8 +245,8 @@ public class GUI extends Application{
         inputHeight.setMaxWidth(300);
         inputSource.setMaxWidth(300);
         
-        Button addButton2 = new Button("Add Path");
-        addButton2.setOnAction(e->{
+        Button addButton4 = new Button("Add Path");
+        addButton4.setOnAction(e->{
             boolean valid=true;
             
             if(inputDestination.getText().equals("")||inputHeight.getText().equals("")){
@@ -248,6 +254,7 @@ public class GUI extends Application{
                 valid=false;
                 return;
             }
+            
             if(map.hasPoint(inputSource.getText()).getPath()<1){
                 GUIAlertBox.display("Attention","Exceeded number of path." );
                 valid=false;
@@ -260,65 +267,75 @@ public class GUI extends Application{
                 
             if(map.isPath(inputSource.getText(),inputDestination.getText())){
                 GUIAlertBox.display("Error", "Redundant Path ID.");
-                inputDestination.clear();
-                inputHeight.clear();
                 valid=false;
             }
             
             if(inputSource.getText().equals(inputDestination.getText())){
                 GUIAlertBox.display("Error", "Same ID.");
-                inputDestination.clear();
-                inputHeight.clear();
                 valid=false;
             }
             
             if(valid){
-                map.addPath(inputSource.getText(),inputDestination.getText(),Integer.parseInt(inputHeight.getText()));
-                pathlist.add(new Path(map.hasPoint(inputDestination.getText()),Integer.parseInt(inputHeight.getText()),null,false));
+                pathlist.add(map.addPath(inputSource.getText(),inputDestination.getText(),Integer.parseInt(inputHeight.getText()),false));
+//                pathlist.add(map.addPath(inputSource.getText(),inputDestination.getText(),Integer.parseInt(inputHeight.getText())));
                 pathlist.get(pathlist.size()-1).setSource(map.hasPoint(inputSource.getText()));
-                inputDestination.clear();
-                inputHeight.clear();
                 numPath=map.hasPoint(inputSource.getText()).getPath();
                 map.hasPoint(inputSource.getText()).setPath(numPath-1);
                 pathtable.setItems(pathlist);
             }
+            inputSource.clear();
+            inputDestination.clear();
+            inputHeight.clear();
         });
         
-        Button okButton2 = new Button("Ok");
-        okButton2.setOnAction(e->{primaryStage.setScene(scene5);});
+        Button nextButton4 = new Button("Next");
+        nextButton4.setOnAction(e->{primaryStage.setScene(scene5);});
         
-        Button randomButton2= new Button("Random");
-        randomButton2.setOnAction(e->{
+        Button randomButton4= new Button("Random");
+        randomButton4.setOnAction(e->{
             r=new Random();
+            inputSource.setText(map.get(r.nextInt(map.size())).getID()+"");
             inputDestination.setText(map.get(r.nextInt(map.size())).getID()+"");
             inputHeight.setText((r.nextInt(15)+1)+"");
         });
         
-        GridPane grid2 = new GridPane();
-        grid2.setPadding(new Insets(20));
-        grid2.setVgap(8);
-        grid2.setHgap(20);
-        GridPane.setConstraints(Sourcelabel,0,0);GridPane.setConstraints(inputSource, 1, 0);
-        GridPane.setConstraints(Destinationlabel, 0, 2);GridPane.setConstraints(inputDestination, 1, 2);
-        GridPane.setConstraints(Heightlabel, 0, 4);GridPane.setConstraints(inputHeight, 1, 4);
-        grid2.getChildren().addAll(Sourcelabel,inputSource,Destinationlabel, Heightlabel,inputDestination, inputHeight);
-        BorderPane buttons2=new BorderPane();
-        buttons2.setLeft(addButton2);
-        buttons2.setCenter(randomButton2);
-        buttons2.setRight(okButton2);
-        buttons2.setPadding(new Insets(100));
-        BorderPane pane2 = new BorderPane();
-        pane2.setTop(pathtable);
-        pane2.setCenter(grid2);
-        pane2.setBottom(buttons2);
-        scene4 = new Scene(pane2,1000,800);
+        Button backButton4=new Button("Back");
+        backButton4.setOnAction(e -> {   
+            primaryStage.setScene(scene3);
+        });
+        
+        GridPane grid4 = new GridPane();
+        grid4.setPadding(new Insets(50,20,20,0));
+        grid4.setVgap(8);
+        grid4.setHgap(20);
+        GridPane.setConstraints(Sourcelabel,15,0);GridPane.setConstraints(inputSource, 16, 0);
+        GridPane.setConstraints(Destinationlabel, 15, 2);GridPane.setConstraints(inputDestination, 16, 2);
+        GridPane.setConstraints(Heightlabel, 15, 4);GridPane.setConstraints(inputHeight, 16, 4);
+        grid4.getChildren().addAll(Sourcelabel,inputSource,Destinationlabel, Heightlabel,inputDestination, inputHeight);
+        GridPane buttons4=new GridPane();
+        buttons4.setPadding(new Insets(0,100,100,100));
+        buttons4.setHgap(50);
+        GridPane.setConstraints(backButton4,2,0);
+        GridPane.setConstraints(addButton4,4,0);
+        GridPane.setConstraints(randomButton4,6,0);
+        GridPane.setConstraints(nextButton4,8,0);
+        buttons4.getChildren().addAll(backButton4,addButton4,randomButton4,nextButton4);
+        BorderPane pane4 = new BorderPane();
+        pane4.setTop(pathtable);
+        pane4.setCenter(grid4);
+        pane4.setBottom(buttons4);
+        scene4 = new Scene(pane4,1000,800);
+        scene4.setOnKeyPressed(e->{
+            if(e.getCode().equals(KeyCode.ENTER))
+                inputHeight.setOnAction(addButton4.getOnAction());
+        });
         ///////////////////////////Fifth Layout///////////////////////////////
         ObservableList<Kangaroo> kangaroolist=FXCollections.observableArrayList();
         
         TableColumn<Kangaroo, Point> location = new TableColumn<>("Location");
         TableColumn<Kangaroo, Character> gender = new TableColumn<>("Gender");
         TableColumn<Kangaroo, Integer> maxfood=new TableColumn<>("Maximum food");
-        location.setMinWidth(250);
+        location.setMinWidth(150);
         gender.setMinWidth(200);
         maxfood.setMinWidth(150);
         location.setCellValueFactory(new PropertyValueFactory<>("point"));
@@ -338,8 +355,8 @@ public class GUI extends Application{
         inputGender.setMaxWidth(300);
         inputMaxFood.setMaxWidth(300);
         
-        Button addButton3 = new Button("Add Kangaroo");
-        addButton3.setOnAction(e->{
+        Button addButton5 = new Button("Add Kangaroo");
+        addButton5.setOnAction(e->{
             boolean valid=true;
             
             if(inputLocation.getText().equals("")||inputGender.getText().equals("")||inputMaxFood.getText().equals("")){
@@ -347,43 +364,38 @@ public class GUI extends Application{
                 valid=false;
                 return;
             }
-            if(map.hasPoint(inputSource.getText()).isFull()){
+            if(map.hasPoint(inputLocation.getText()).isFull()){
                 GUIAlertBox.display("Attention","The point is full" );
                 valid=false;
             }
 
-            if(!isInteger(inputMaxFood)||!inputGender.equals("M")&&!inputGender.equals("F")){
+            if(!isInteger(inputMaxFood)||!(inputGender.getText().toUpperCase().charAt(0)==('M'))&&!(inputGender.getText().toUpperCase().charAt(0)==('F'))){
                 GUIAlertBox.display("Error", "Incorrect data type.");
                 valid=false;
             }
                 
             if(map.hasPoint(inputLocation.getText())==null){
                 GUIAlertBox.display("Error", "The point do not exist");
-                inputDestination.clear();
-                inputHeight.clear();
                 valid=false;
             }
             
             if(valid){
                 kangaroo.add(new Kangaroo(map.hasPoint(inputLocation.getText()),inputGender.getText().charAt(0),Integer.parseInt(inputMaxFood.getText())));
-                kangaroolist.add(new Kangaroo(map.hasPoint(inputLocation.getText()),inputGender.getText().charAt(0),Integer.parseInt(inputMaxFood.getText())));
-                pathlist.get(pathlist.size()-1).setSource(map.hasPoint(inputSource.getText()));
-                inputLocation.clear();
-                inputGender.clear();
-                inputMaxFood.clear();
-                table.setItems(pathlist);
+//                kangaroolist.add(new Kangaroo(map.hasPoint(inputLocation.getText()),inputGender.getText().charAt(0),Integer.parseInt(inputMaxFood.getText())));
+                kangaroolist.add(kangaroo.getLast());
+                kangarootable.setItems(kangaroolist);
             }
+            inputLocation.clear();
+            inputGender.clear();
+            inputMaxFood.clear();
         });
         
-        Button okButton3 = new Button("Start");
-        okButton3.setOnAction(e->{
-            try{
-            JumpyGrof.animation();
-            }catch(Exception i){}
+        Button nextButton5 = new Button("Next");
+        nextButton5.setOnAction(e->{primaryStage.setScene(scene6);
         });
         
-        Button randomButton3= new Button("Random");
-        randomButton3.setOnAction(e->{
+        Button randomButton5= new Button("Random");
+        randomButton5.setOnAction(e->{
             r=new Random();
             inputLocation.setText(map.get(r.nextInt(map.size())).getID()+"");
             char temp=r.nextInt(2)>0?'M':'F';
@@ -391,25 +403,83 @@ public class GUI extends Application{
             inputMaxFood.setText((r.nextInt(13)+1)+"");
         });
         
-        GridPane grid3 = new GridPane();
-        grid3.setPadding(new Insets(20));
-        grid3.setVgap(8);
-        grid3.setHgap(20);
-        GridPane.setConstraints(Locationlabel,0,0);GridPane.setConstraints(inputLocation, 1, 0);
-        GridPane.setConstraints(Genderlabel, 0, 2);GridPane.setConstraints(inputGender, 1, 2);
-        GridPane.setConstraints(MaxFoodlabel, 0, 4);GridPane.setConstraints(inputMaxFood, 1, 4);
-        grid3.getChildren().addAll(Locationlabel,inputLocation,Genderlabel,MaxFoodlabel,inputGender, inputMaxFood);
-        BorderPane buttons3=new BorderPane();
-        buttons3.setLeft(addButton3);
-        buttons3.setCenter(randomButton3);
-        buttons3.setRight(okButton3);
-        buttons3.setPadding(new Insets(100));
-        BorderPane pane3 = new BorderPane();
-        pane3.setTop(kangarootable);
-        pane3.setCenter(grid3);
-        pane3.setBottom(buttons3);
-        scene5 = new Scene(pane3,1000,800);
-
+        Button backButton5=new Button("Back");
+        backButton5.setOnAction(e -> {   
+            primaryStage.setScene(scene4);
+        });
+        
+        GridPane grid5 = new GridPane();
+        grid5.setPadding(new Insets(70,20,20,0));
+        grid5.setVgap(8);
+        grid5.setHgap(20);
+        GridPane.setConstraints(Locationlabel,15,0);GridPane.setConstraints(inputLocation, 16, 0);
+        GridPane.setConstraints(Genderlabel, 15, 2);GridPane.setConstraints(inputGender, 16, 2);
+        GridPane.setConstraints(MaxFoodlabel, 15, 4);GridPane.setConstraints(inputMaxFood, 16, 4);
+        grid5.getChildren().addAll(Locationlabel,inputLocation,Genderlabel,MaxFoodlabel,inputGender, inputMaxFood);
+        GridPane buttons5=new GridPane();
+        buttons5.setPadding(new Insets(0,100,100,100));
+        buttons5.setHgap(50);
+        GridPane.setConstraints(backButton5,2,0);
+        GridPane.setConstraints(addButton5,4,0);
+        GridPane.setConstraints(randomButton5,6,0);
+        GridPane.setConstraints(nextButton5,8,0);
+        buttons5.getChildren().addAll(backButton5,addButton5,randomButton5,nextButton5);
+        BorderPane pane5 = new BorderPane();
+        pane5.setTop(kangarootable);
+        pane5.setCenter(grid5);
+        pane5.setBottom(buttons5);
+        scene5 = new Scene(pane5,1000,800);
+        scene5.setOnKeyPressed(e->{
+            if(e.getCode().equals(KeyCode.ENTER))
+                inputMaxFood.setOnAction(addButton5.getOnAction());
+        });
+        ///////////////////////////Sixth Layout///////////////////////////////
+        TextField inputThreshold = new TextField();
+        inputThreshold.setPromptText("Enter colony threshold");
+        inputThreshold.setMaxWidth(300);
+        
+        Label Thresholdlabel=new Label("Enter the threshold to form colony:");
+        
+        Button enterButton6 = new Button("Enter");
+        enterButton6.setOnAction(e->{
+            if(isInteger(inputThreshold))
+                map.setThreshold(Integer.parseInt(inputThreshold.getText()));
+            else
+                GUIAlertBox.display("Error", inputThreshold.getText()+" is not an integer.");
+        });
+        
+        Button backButton6=new Button("Back");
+        backButton6.setOnAction(e -> {   
+            primaryStage.setScene(scene5);
+        });
+        
+        Button startButton6=new Button("Start");
+        enterButton6.setOnAction(e->{
+            try{
+                JumpyGrof.run();
+            }catch(Exception i){}
+        });
+        
+        ImageView imageview3=new ImageView(image);
+        imageview3.setFitHeight(200);
+        imageview3.setFitWidth(300);
+        
+        BorderPane buttons6=new BorderPane();
+        buttons6.setPadding(new Insets(10,400,10,400));
+        buttons6.setLeft(backButton6);
+        buttons6.setCenter(enterButton6);
+        buttons6.setRight(startButton6);
+        
+        VBox input_layout1 = new VBox(20);
+        input_layout1.getChildren().addAll(imageview3,Thresholdlabel,inputThreshold,buttons6);
+        input_layout1.setAlignment(Pos.CENTER);
+        scene6 = new Scene(input_layout1, 1000,800);
+        
+        scene6.setOnKeyPressed(e -> {
+            if(e.getCode().equals(KeyCode.ENTER))
+                inputThreshold.setOnAction(enterButton6.getOnAction());
+        });
+        
         primaryStage.show();
     }
     
